...
    <string name="level1Str">Level 1</string>
    <string name="level2Str">Level 2</string>
    <string name="level3Str">Level 3</string>
    <string name="level4Str">Level 4</string>
    <string name="level5Str">Level 5</string>
    <string name="nextBallTitle">Next Balls</string>
    <string name="quitGame">Quit Game</string>
    <string name="newGame">New Game</string>
    <string name="optionButton">OPTION</string>
    <string name="title_activity_history">LocalTop10</string>
    <string name="localTop10Score">Local Top 10</string>
    <string name="title_activity_global">GlobalTop10</string>
    <string name="globalTop10Score">Global Top 10</string>
    <string name="action_settings">Settings</string>
    <string name="emptyString">""</string>
    <string name="okStr">OK</string>
    <string name="yesStr">YES</string>
    <string name="noStr">NO</string>
    <string name="gameOverStr">Game Over. Continue?</string>
    <string name="cancelStr">Cancel</string>
    <string name="submitStr">Send</string>
    <string name="nameStr">Input your name</string>
    <string name="loadingStr">Loading …</string>
    <string name="undoStr">Undo</string>
    <string name="localTop10Str">Local Top 10</string>
    <string name="globalTop10Str">Global Top 10</string>
    <string name="fileMenuStr">File</string>
    <string name="settingStr">Settings</string>
    <string name="soundTitle">Sound</string>
    <string name="hasSoundStr">Yes</string>
    <string name="noSoundStr">No</string>
    <string name="onStr">On</string>
    <string name="offStr">Off</string>
    <string name="showingAdsStr">Showing Ads …</string>
    <string name="saveGameStr">Save Game</string>
    <string name="loadGameStr">Load Game</string>
    <string name="rotateDevice">Rotate Device</string>
    <string name="moreActionStr">More</string>
    <string name="savingGameStr">Saving Game</string>
    <string name="loadingGameStr">Loading Game</string>
    <string name="succeededSaveGameStr">Saved game successfully.</string>
    <string name="failedSaveGameStr">Failed to save game.</string>
    <string name="succeededLoadGameStr">Loaded game successfully.</string>
    <string name="failedLoadGameStr">Failed to load game.</string>
    <string name="sureToSaveGameStr">Sure to save game?</string>
    <string name="sureToLoadGameStr">Sure to load game?</string>
    <string name="warningSaveGameStr">Excess the limit</string>
    <string name="howManyTimesStr">times</string>
    <string name="continueStr">Continue</string>
    <string name="showStr">Show</string>
    <string name="noShowStr">No</string>
    <string name="saveScoreStr">Save current Score</string>
...
